<resources>
    <string name="app_name">CodingKid</string>
    <string name="editor">Editor hry</string>

    <!-- Main activity -->
    <string name="main_activity_settings">Nastavenia</string>
    <string name="main_activity_play">Hra</string>
    <string name="main_activity_editor">Editor hry</string>
    <string name="main_activity_welcome_label">Coding Kid</string>
    <string name="main_activity_game">Otvor aktivitu s hrou</string>
    <string name="main_activity_custom_levels_title">Moje hry</string>
    <string name="main_activity_shared_levels_title">Zdieľané hry</string>
    <string name="main_activity_add_level">Vytvoriť hru</string>
    <string name="main_activity_update">Aktualizovať</string>

    <string name="menu_settings">Nastavenia</string>

    <!-- Game activity -->
    <string name="game_activity_remaining_hearts">| Srdiečka: </string>
    <string name="game_activity_remaining_commands">Príkazy: </string>
    <string name="game_activity_code">Kód</string>
    <string name="game_activity_toast_run_out_of_commands">Minul si všetky príkazy</string>
    <string name="game_activity_toast_invalid_code">Počet začiatkov cyklu a koncov cyklu sa nezhoduje</string>

    <!-- Game activity buttons -->
    <string name="game_activity_button_play">Hrať</string>
    <string name="game_activity_button_reset">Znovu</string>
    <string name="game_activity_button_loop_start">Začiatok cyklu</string>
    <string name="game_activity_button_loop_end">koniec cyklu</string>

    <!-- Game  -->
    <string name="game_end_of_animations">Koniec animácie. Skús to znovu.</string>

    <!-- Editor activity buttons -->
    <string name="level_name">Názov hry</string>
    <string name="number">0</string>

    <!-- Editor activity -->
    <string name="text_commands">Príkazy</string>
    <string name="text_objects">Objekty</string>

    <!-- Game activity commands -->
    <string name="command_left">vľavo</string>
    <string name="command_right">vpravo</string>
    <string name="command_up">hore</string>
    <string name="command_down">dole</string>
    <string name="command_loop_start">Cyklus </string>
    <string name="command_loop_start_2">x</string>
    <string name="command_loop_end">koniec cyklu</string>

    <!-- Editor activity -->
    <string name="editor_activity_level_was_saved">Level bol uložený</string>
    <string name="editor_activity_cannot_be_saved_missing_house">Nemožno uložiť level, doplň aspoň jeden domček</string>
    <string name="editor_activity_cannot_be_saved_missing_player">Nemožno uložiť level, chýba hráč</string>
    <string name="editor_activity_cannot_be_saved_not_enough_commands">Nezvolil si maximálny počet príkazov</string>
    <string name="editor_activity_button_save">Ulož</string>
    <string name="editor_activity_button_update">Aktualizuj</string>
    <string name="editor_activity_level_default">hra</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

</resources>
