<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".screens.game.GameActivity">

    <LinearLayout
        android:id="@+id/up_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:id="@+id/grid"
            android:layout_weight="1"
            android:rowCount="8"
            android:columnCount="15"
            android:background="@color/colorMoonMist"
            android:layout_alignParentEnd="true">

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="@color/colorDonJuan"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4">


        <EditText
            android:id="@+id/inputName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/level_name"
            style="@style/ControlPanelsButtonsWithText" />


        <LinearLayout
            style="@style/ControlPanelsButtonsWithText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center_vertical"
            android:layout_weight="0.33">

            <EditText
                android:id="@+id/inputHearts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/number"
                style="@style/ControlPanelsButtonsWithText" />

            <TextView
                android:id="@+id/textObjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/text_objects" />

        </LinearLayout>


        <LinearLayout
            style="@style/ControlPanelsButtonsWithText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/inputCommands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/number"
                style="@style/ControlPanelsButtonsWithText" />

            <TextView
                android:id="@+id/textCommands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_horizontal"
                android:layout_weight="1"
                android:text="@string/text_commands" />

        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            style="@style/ControlPanelsButtonsWithText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="save"
            android:text="@string/editor_activity_button_save" />

    </LinearLayout>
</LinearLayout>