<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".screens.game.GameActivity">

    <LinearLayout
        android:id="@+id/up_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="4">

        <view
            android:id="@+id/canvas"
            class="com.example.beebzb.codingkid.screens.game.GameGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorKeppel" />

        <LinearLayout
            android:id="@+id/info_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorMossGreen"
            android:orientation="vertical"
            android:padding="@dimen/activity_game_info_panel_padding">

            <LinearLayout
                android:id="@+id/level_info_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/GameActivityInfoLabels"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center|start"
                            android:text="@string/game_activity_remaining_commands" />

                        <TextView
                            android:id="@+id/label_remaining_commands"
                            style="@style/GameActivityInfoNumbers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|start" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            style="@style/GameActivityInfoLabels"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center|start"
                            android:text="@string/game_activity_remaining_hearts" />

                        <TextView
                            android:id="@+id/label_remaining_hearts"
                            style="@style/GameActivityInfoNumbers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|start" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorKeppel"
                    android:layout_margin="@dimen/activity_game_separator_padding_bottom"/>

                <TextView
                    android:id="@+id/label_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_activity_code"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <ListView
                    android:id="@+id/code_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@color/colorDonJuan"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button_loop_start"
                style="@style/ControlPanelsButtonsWithText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/game_activity_button_loop_start" />

            <Button
                android:id="@+id/button_loop_end"
                style="@style/ControlPanelsButtonsWithText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/game_activity_button_loop_end" />
        </LinearLayout>


        <LinearLayout
            style="@style/ControlPanelsButtonsWithText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/button_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/left"
                android:tint="@color/colorWhite" />

            <ImageButton
                android:id="@+id/button_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/up"
                android:tint="@color/colorMossGreen" />

            <ImageButton
                android:id="@+id/button_down"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/down"
                android:tint="@color/colorKeppel" />

            <ImageButton
                android:id="@+id/button_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/right"
                android:tint="@color/colorCuttySark" />

        </LinearLayout>

        <Button
            android:id="@+id/button_play"
            style="@style/ControlPanelsButtonsWithText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_activity_button_play" />

    </LinearLayout>
</LinearLayout>